# theta-quench-schwinger-lab

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-no-nnqs.txt  requirements.txt
cached_runs/: quench_summary.csv  sweep_grid.npz  validation.json
configs/: alt_regime.yaml  alt_regime_heavy_mass.yaml  alt_regime_strong_coupling.yaml  default.yaml  effect_registry.schema.json  n10_exact.yaml  n10_stress.yaml  n12_sector.yaml  no_nnqs.yaml  novelty.yaml  research_heavy.yaml  smoke.yaml  stage2_universal.yaml  stage2_universal_quick.yaml  stage3_universal.yaml  stage3_universal_v2.yaml  stage3_universal_v3.yaml  stage3_universal_v4.yaml  stage3_universal_v5.yaml  stage3_universal_v6.yaml  stage3_universal_v7.yaml  stage3_universal_v8.yaml  stage5_external_v1.yaml
docs/: index.html  style.css
experiments/: audit_stage2.py  build_compute_budget_table.py  build_effect_registry.py  build_project_capsule.py  build_publishability_final.py  build_publishability_status.py  build_regime_boundary_plot.py  build_regime_sensitivity.py  build_report_pdf.py  build_showcase.py  build_stage2_completion_report.py  build_stage2_effect_registry.py  build_stage2_robustness_report.py  cache_runs.py  calibrate_magic_estimator.py  camera_ready.py  check_stage_gate.py  claim_gate.py  make_animation.py  manual_verification.py  nnqs_seed_sweep.py  novelty_robustness.py  positive_control_magic_family.py  run_all.py  run_nnqs_snapshots.py  run_quench_grid.py  run_registered_study.py  stage2_claim_gate.py  stage2_corridor_robustness.py  stage2_mechanism_regression.py  (+5 more)
tqm/: cli.py  (+12 more)
(+103 files in other folders)
